--- a/src/templates/rocky/manila.conf
+++ b/src/templates/rocky/manila.conf
@@ -1,8 +1,8 @@
 # Note that the original manila.conf file is extensive and has many options
 # that the charm does not set.  Please refer to that file if there are options
 # that you think the charm should set, but doesn't, or provide options for.
-# Please file a bug at: https://bugs.launchpad.net/charm-barbican/+filebug for
-# any changes you need made or intend to modify in the charm.
+# Please file a bug at: https://bugs.launchpad.net/charm-manila-ganesha/+filebug
+# for any changes you need made or intend to modify in the charm.
 
 [DEFAULT]
 
@@ -12,13 +12,10 @@ api_paste_config = /etc/manila/api-paste.ini
 share_name_template = share-%s
 
 my_ip = {{ options.access_ip }}
-
+enabled_share_backends = cephfsnfs1
 scheduler_driver = manila.scheduler.drivers.filter.FilterScheduler
 
 debug = {{ options.debug }}
-
-# Number of workers for OpenStack Share API service. (integer value)
-osapi_share_workers = {{ options.workers }}
 
 {% include "parts/section-transport-url" %}
 
@@ -44,9 +41,11 @@ osapi_share_workers = {{ options.workers }}
 
 {% include "parts/section-oslo-messaging-rabbit" %}
 
-[ganesha]
+[cephfsnfs1]
 driver_handles_share_servers = False
-share_backend_name = GANESHA
+ganesha_rados_store_enable = True
+ganesha_rados_store_pool_name = manila_ganesha
+share_backend_name = CEPHFSNFS1
 share_driver = manila.share.drivers.cephfs.driver.CephFSDriver
 cephfs_protocol_helper_type = NFS
 cephfs_conf_path = /etc/ceph/ceph.conf
