--- a/src/tests/bundles/bionic-rocky.yaml
+++ b/src/tests/bundles/bionic-rocky.yaml
@@ -30,7 +30,7 @@ services:
     num_units: 1
     options:
       openstack-origin: *source
-      default-share-backend: ganesha
+      default-share-backend: cephfsnfs1
       share-protocols: NFS
   rabbitmq-server:
     charm: cs:~openstack-charmers-next/rabbitmq-server
