--- a/src/tests/bundles/bionic-stein.yaml
+++ b/src/tests/bundles/bionic-stein.yaml
@@ -31,7 +31,7 @@ services:
     num_units: 1
     options:
       openstack-origin: *source
-      default-share-backend: ganesha
+      default-share-backend: cephfsnfs1
       share-protocols: NFS
       # default-share-type:
   rabbitmq-server:
