CephFS NFS shares can be created

--- a/src/templates/ceph.conf
+++ b/src/templates/ceph.conf
@@ -6,5 +6,12 @@
 [global]
 {% if ceph.auth -%}
 auth_supported = {{ ceph.auth }}
+keyring = /etc/ceph/$cluster.$name.keyring
 mon host = {{ ceph.monitors }}
+
+
+[client.manila-ganesha]
+client mount uid = 0
+client mount gid = 0
+log file = /var/log/ceph/ceph-client.manila.log
 {% endif -%}
