--- a/src/templates/rocky/manila.conf
+++ b/src/templates/rocky/manila.conf
@@ -19,6 +19,9 @@ debug = {{ options.debug }}
 
 {% include "parts/section-transport-url" %}
 
+[oslo_concurrency]
+lock_path = /var/lib/manila/tmp
+
 # parts/section-database includes the [database] section identifier
 {% include "parts/section-database" %}
 
@@ -44,12 +47,12 @@ debug = {{ options.debug }}
 [cephfsnfs1]
 driver_handles_share_servers = False
 ganesha_rados_store_enable = True
-ganesha_rados_store_pool_name = manila_ganesha
+ganesha_rados_store_pool_name = manila-ganesha
 share_backend_name = CEPHFSNFS1
 share_driver = manila.share.drivers.cephfs.driver.CephFSDriver
 cephfs_protocol_helper_type = NFS
 cephfs_conf_path = /etc/ceph/ceph.conf
-cephfs_auth_id = manila
+cephfs_auth_id = manila-ganesha
 cephfs_cluster_name = ceph
 cephfs_enable_snapshots = False
 cephfs_ganesha_server_is_remote = False
