--- a/src/config.yaml
+++ b/src/config.yaml
@@ -15,7 +15,7 @@ options:
       provide a later version of OpenStack will trigger a software
       upgrade.
   rabbit-user:
-    default: manila
+    default: manila-ganesha
     type: string
     description: Username used to access rabbitmq queue
   rabbit-vhost:
@@ -23,7 +23,7 @@ options:
     type: string
     description: Rabbitmq vhost
   database-user:
-    default: manila
+    default: manila-ganesha
     type: string
     description: Username for Manila database access
   database:
