Add local tests to validate share config

--- a/src/tox.ini
+++ b/src/tox.ini
@@ -14,7 +14,7 @@ install_command =
   pip install {opts} {packages}
 commands = stestr run {posargs}
 whitelist_externals = juju
-passenv = HOME TERM AMULET_* CS_API_*
+passenv = HOME TERM AMULET_* CS_API_* OS_*
 deps = -r{toxinidir}/test-requirements.txt
 
 [testenv:py27]
