--- a/src/tests/bundles/bionic-rocky.yaml
+++ b/src/tests/bundles/bionic-rocky.yaml
@@ -9,7 +9,7 @@ services:
     options:
       openstack-origin: *source
   ceph-mon:
-    charm: cs:~openstack-charmers-next/ceph-mon
+    charm: /home/ubuntu/ceph-mon
     num_units: 3
     options:
       source: *source
@@ -26,12 +26,49 @@ services:
     options:
       source: *source
   manila:
-    charm: cs:~openstack-charmers-next/manila
+    # charm: cs:~openstack-charmers-next/manila
+    charm: /home/ubuntu/manila/build/builds/manila
     num_units: 1
     options:
       openstack-origin: *source
       default-share-backend: cephfsnfs1
       share-protocols: NFS
+  nova-cloud-controller:
+    charm: cs:~openstack-charmers-next/nova-cloud-controller
+    num_units: 1
+    options:
+      network-manager: Neutron
+      openstack-origin: *source
+  nova-compute:
+    charm: cs:~openstack-charmers-next/nova-compute
+    num_units: 2
+    constraints: mem=8G
+    options:
+      config-flags: default_ephemeral_format=ext4
+      enable-live-migration: true
+      enable-resize: true
+      migration-auth-type: ssh
+      openstack-origin: *source
+  glance:
+    charm: cs:~openstack-charmers-next/glance
+    num_units: 1
+    options:
+      openstack-origin: *source
+  neutron-api:
+    charm: cs:~openstack-charmers-next/neutron-api
+    num_units: 1
+    options:
+      flat-network-providers: physnet1
+      neutron-security-groups: true
+      openstack-origin: *source
+  neutron-openvswitch:
+    charm: cs:~openstack-charmers-next/neutron-openvswitch
+  neutron-gateway:
+    charm: cs:~openstack-charmers-next/neutron-gateway
+    num_units: 1
+    options:
+      bridge-mappings: physnet1:br-ex
+      openstack-origin: *source
   rabbitmq-server:
     charm: cs:~openstack-charmers-next/rabbitmq-server
     num_units: 1
@@ -71,3 +108,41 @@ relations:
     - percona-cluster
   - - manila
     - percona-cluster
+  - - 'neutron-api:shared-db'
+    - 'percona-cluster:shared-db'
+  - - 'neutron-api:amqp'
+    - 'rabbitmq-server:amqp'
+  - - 'neutron-api:neutron-api'
+    - 'nova-cloud-controller:neutron-api'
+  - - 'neutron-api:neutron-plugin-api'
+    - 'neutron-gateway:neutron-plugin-api'
+  - - 'neutron-api:identity-service'
+    - 'keystone:identity-service'
+  - - 'nova-compute:neutron-plugin'
+    - 'neutron-openvswitch:neutron-plugin'
+  - - 'nova-cloud-controller:shared-db'
+    - 'percona-cluster:shared-db'
+  - - 'neutron-gateway:amqp'
+    - 'rabbitmq-server:amqp'
+  - - 'nova-cloud-controller:amqp'
+    - 'rabbitmq-server:amqp'
+  - - 'nova-compute:amqp'
+    - 'rabbitmq-server:amqp'
+  - - 'neutron-openvswitch:amqp'
+    - 'rabbitmq-server:amqp'
+  - - 'nova-cloud-controller:identity-service'
+    - 'keystone:identity-service'
+  - - 'nova-cloud-controller:cloud-compute'
+    - 'nova-compute:cloud-compute'
+  - - 'glance:identity-service'
+    - 'keystone:identity-service'
+  - - 'glance:shared-db'
+    - 'percona-cluster:shared-db'
+  - - 'glance:amqp'
+    - 'rabbitmq-server:amqp'
+  - - 'nova-compute:image-service'
+    - 'glance:image-service'
+  - - 'nova-cloud-controller:image-service'
+    - 'glance:image-service'
+  - - 'nova-cloud-controller:quantum-network-service'
+    - 'neutron-gateway:quantum-network-service'
