--- a/src/tests/tests.yaml
+++ b/src/tests/tests.yaml
@@ -1,5 +1,4 @@
 charm_name: manila-ganesha
-configure: []
 dev_bundles:
 - bionic
 gate_bundles:
@@ -9,4 +8,12 @@ gate_bundles:
 smoke_bundles:
 - bionic-stein
 target_deploy_status: {}
-tests: []
+tests:
+  - local_tests.manila_ganesha.tests.ManilaGaneshaTests
+configure:
+  - zaza.openstack.charm_tests.glance.setup.add_lts_image
+  - zaza.openstack.charm_tests.neutron.setup.basic_overcloud_network
+  - zaza.openstack.charm_tests.nova.setup.create_flavors
+  - zaza.openstack.charm_tests.nova.setup.manage_ssh_key
+  - zaza.openstack.charm_tests.keystone.setup.add_demo_user
+  - local_tests.manila_ganesha.setup.setup_ganesha_share_type
