Update charm with latest config from release-tools
Additionally, update bundle to point at released
charm-manila

Change-Id: Icb93b78747798a61db6706846ab9f532cbd058cd

--- a/src/tests/bundles/bionic-stein.yaml
+++ b/src/tests/bundles/bionic-stein.yaml
@@ -9,7 +9,7 @@ services:
     options:
       openstack-origin: *source
   ceph-mon:
-    charm: /home/ubuntu/ceph-mon
+    charm: cs:~openstack-charmers-next/ceph-mon
     num_units: 3
     options:
       source: *source
@@ -27,7 +27,7 @@ services:
       source: *source
   manila:
     # charm: cs:~openstack-charmers-next/manila
-    charm: /home/ubuntu/manila/build/builds/manila
+    charm: cs:~openstack-charmers-next/manila
     num_units: 1
     options:
       openstack-origin: *source
