--- a/src/tests/bundles/bionic-train.yaml
+++ b/src/tests/bundles/bionic-train.yaml
@@ -1,6 +1,6 @@
 series: bionic
 options:
-  source: &source cloud:bionic-rocky
+  source: &source cloud:bionic-train
 services:
   manila-ganesha:
     num_units: 1
@@ -38,6 +38,11 @@ services:
     num_units: 1
     options:
       network-manager: Neutron
+      openstack-origin: *source
+  placement:
+    charm: cs:~openstack-charmers-next/placement
+    num_units: 1
+    options:
       openstack-origin: *source
   nova-compute:
     charm: cs:~openstack-charmers-next/nova-compute
@@ -114,6 +119,14 @@ relations:
     - 'rabbitmq-server:amqp'
   - - 'neutron-api:neutron-api'
     - 'nova-cloud-controller:neutron-api'
+  - - 'placement:placement'
+    - 'nova-cloud-controller:placement'
+  - - 'placement:amqp'
+    - 'rabbitmq-server:amqp'
+  - - 'placement:shared-db'
+    - 'percona-cluster:shared-db'
+  - - 'placement:identity-service'
+    - 'keystone:identity-service'
   - - 'neutron-api:neutron-plugin-api'
     - 'neutron-gateway:neutron-plugin-api'
   - - 'neutron-api:identity-service'
