--- a/src/tox.ini
+++ b/src/tox.ini
@@ -1,89 +1,35 @@
-# Classic charm: ./tox.ini
+# Source charm (with zaza): ./src/tox.ini
 # This file is managed centrally by release-tools and should not be modified
-# within individual charm repos.
+# within individual charm repos.  See the 'global' dir contents for available
+# choices of tox.ini for OpenStack Charms:
+#     https://github.com/openstack-charmers/release-tools
+
 [tox]
-envlist = pep8,py37
+envlist = pep8
 skipsdist = True
+# NOTE: Avoid build/test env pollution by not enabling sitepackages.
+sitepackages = False
+# NOTE: Avoid false positives by not skipping missing interpreters.
+skip_missing_interpreters = False
 
 [testenv]
 setenv = VIRTUAL_ENV={envdir}
          PYTHONHASHSEED=0
-         CHARM_DIR={envdir}
-         AMULET_SETUP_TIMEOUT=5400
+whitelist_externals = juju
+passenv = HOME TERM CS_* OS_* TEST_*
+deps = -r{toxinidir}/test-requirements.txt
 install_command =
   pip install {opts} {packages}
-commands = stestr run {posargs}
-whitelist_externals = juju
-passenv = HOME TERM AMULET_* CS_API_* OS_*
-deps = -r{toxinidir}/test-requirements.txt
-
-[testenv:py27]
-basepython = python2.7
-deps = -r{toxinidir}/requirements.txt
-       -r{toxinidir}/test-requirements.txt
-# temporarily disable py27
-commands = /bin/true
-
-[testenv:py3]
-basepython = python3
-deps = -r{toxinidir}/requirements.txt
-       -r{toxinidir}/test-requirements.txt
-
-; keep zuul happy until we change the py35 job
-[testenv:py35]
-basepython = python3.5
-deps = -r{toxinidir}/requirements.txt
-       -r{toxinidir}/test-requirements.txt
-
-[testenv:py36]
-basepython = python3.6
-deps = -r{toxinidir}/requirements.txt
-       -r{toxinidir}/test-requirements.txt
-
-[testenv:py37]
-basepython = python3.7
-deps = -r{toxinidir}/requirements.txt
-       -r{toxinidir}/test-requirements.txt
 
 [testenv:pep8]
 basepython = python3
-deps = -r{toxinidir}/requirements.txt
-       -r{toxinidir}/test-requirements.txt
-commands = flake8 {posargs} hooks unit_tests tests actions lib
-           charm-proof
+deps=charm-tools
+commands = charm-proof
 
-[testenv:cover]
-# Technique based heavily upon
-# https://github.com/openstack/nova/blob/master/tox.ini
+[testenv:func-noop]
 basepython = python3
-deps = -r{toxinidir}/requirements.txt
-       -r{toxinidir}/test-requirements.txt
-setenv =
-    {[testenv]setenv}
-    PYTHON=coverage run
 commands =
-    coverage erase
-    stestr run {posargs}
-    coverage combine
-    coverage html -d cover
-    coverage xml -o cover/coverage.xml
-    coverage report
-
-[coverage:run]
-branch = True
-concurrency = multiprocessing
-parallel = True
-source =
-    .
-omit =
-    .tox/*
-    */charmhelpers/*
-    unit_tests/*
-
-[testenv:venv]
-basepython = python3
-commands = {posargs}
-
+    functest-run-suite --help
 
 [testenv:func]
 basepython = python3
@@ -95,11 +41,10 @@ basepython = python3
 commands =
     functest-run-suite --keep-model --smoke
 
-[testenv:func-dev]
+[testenv:func-target]
 basepython = python3
 commands =
-    functest-run-suite --keep-model --dev
+    functest-run-suite --keep-model --bundle {posargs}
 
-[flake8]
-ignore = E402,E226
-exclude = */charmhelpers
+[testenv:venv]
+commands = {posargs}
