--- a/src/metadata.yaml
+++ b/src/metadata.yaml
@@ -14,6 +14,8 @@ series:
   - disco
   - eoan
 subordinate: false
+extra-bindings:
+  tenant-storage:
 provides:
   manila-plugin:
     interface: manila-plugin
