--- a/src/tests/tests.yaml
+++ b/src/tests/tests.yaml
@@ -9,11 +9,11 @@ smoke_bundles:
 - bionic-train
 target_deploy_status: {}
 tests:
-  - local_tests.manila_ganesha.tests.ManilaGaneshaTests
+  - zaza.openstack.charm_tests.manila_ganesha.tests.ManilaGaneshaTests
 configure:
   - zaza.openstack.charm_tests.glance.setup.add_lts_image
   - zaza.openstack.charm_tests.neutron.setup.basic_overcloud_network
   - zaza.openstack.charm_tests.nova.setup.create_flavors
   - zaza.openstack.charm_tests.nova.setup.manage_ssh_key
   - zaza.openstack.charm_tests.keystone.setup.add_demo_user
-  - local_tests.manila_ganesha.setup.setup_ganesha_share_type
+  - zaza.openstack.charm_tests.manila_ganesha.setup.setup_ganesha_share_type
