--- a/src/tests/bundles/bionic-train.yaml
+++ b/src/tests/bundles/bionic-train.yaml
@@ -9,43 +9,43 @@ services:
     options:
       openstack-origin: *source
   ceph-mon:
-    charm: cs:~openstack-charmers-next/ceph-mon
+    charm: cs:ceph-mon
     num_units: 3
     options:
       source: *source
   ceph-osd:
-    charm: cs:~openstack-charmers-next/ceph-osd
+    charm: cs:ceph-osd
     num_units: 3
     options:
       source: *source
     storage:
       osd-devices: 'cinder,10G'
   ceph-fs:
-    charm: cs:~openstack-charmers-next/ceph-fs
+    charm: cs:ceph-fs
     num_units: 2
     options:
       source: *source
   manila:
-    # charm: cs:~openstack-charmers-next/manila
-    charm: cs:~openstack-charmers-next/manila
+    # charm: cs:manila
+    charm: cs:manila
     num_units: 1
     options:
       openstack-origin: *source
       default-share-backend: cephfsnfs1
       share-protocols: NFS
   nova-cloud-controller:
-    charm: cs:~openstack-charmers-next/nova-cloud-controller
+    charm: cs:nova-cloud-controller
     num_units: 1
     options:
       network-manager: Neutron
       openstack-origin: *source
   placement:
-    charm: cs:~openstack-charmers-next/placement
+    charm: cs:placement
     num_units: 1
     options:
       openstack-origin: *source
   nova-compute:
-    charm: cs:~openstack-charmers-next/nova-compute
+    charm: cs:nova-compute
     num_units: 2
     constraints: mem=8G
     options:
@@ -55,37 +55,37 @@ services:
       migration-auth-type: ssh
       openstack-origin: *source
   glance:
-    charm: cs:~openstack-charmers-next/glance
+    charm: cs:glance
     num_units: 1
     options:
       openstack-origin: *source
   neutron-api:
-    charm: cs:~openstack-charmers-next/neutron-api
+    charm: cs:neutron-api
     num_units: 1
     options:
       flat-network-providers: physnet1
       neutron-security-groups: true
       openstack-origin: *source
   neutron-openvswitch:
-    charm: cs:~openstack-charmers-next/neutron-openvswitch
+    charm: cs:neutron-openvswitch
   neutron-gateway:
-    charm: cs:~openstack-charmers-next/neutron-gateway
+    charm: cs:neutron-gateway
     num_units: 1
     options:
       bridge-mappings: physnet1:br-ex
       openstack-origin: *source
   rabbitmq-server:
-    charm: cs:~openstack-charmers-next/rabbitmq-server
+    charm: cs:rabbitmq-server
     num_units: 1
     options:
       source: *source
   percona-cluster:
-    charm: cs:~openstack-charmers-next/percona-cluster
+    charm: cs:percona-cluster
     num_units: 1
     options:
       source: *source
   keystone:
-    charm: cs:~openstack-charmers-next/keystone
+    charm: cs:keystone
     num_units: 1
     options:
       openstack-origin: *source
