--- a/src/tests/tests.yaml
+++ b/src/tests/tests.yaml
@@ -5,6 +5,8 @@ gate_bundles:
 - bionic-rocky
 - bionic-stein
 - bionic-train
+- bionic-ussuri
+- focal-ussuri
 smoke_bundles:
 - bionic-train
 target_deploy_status: {}
@@ -17,3 +19,6 @@ configure:
   - zaza.openstack.charm_tests.nova.setup.manage_ssh_key
   - zaza.openstack.charm_tests.keystone.setup.add_demo_user
   - zaza.openstack.charm_tests.manila_ganesha.setup.setup_ganesha_share_type
+tests_options:
+  force_deploy:
+    - focal-ussuri
