Remove inherited configuration options invalid for charm
Add missing icon.

Change-Id: Icd8b168116a9025e4917653a5144586637718d51
Closes-Bug: #1879088

--- a/src/layer.yaml
+++ b/src/layer.yaml
@@ -10,3 +10,10 @@ options:
   basic:
     use_venv: True
     include_system_packages: False
+config:
+  deletes:
+    - region
+    - ssl_ca
+    - ssl_cert
+    - ssl_key
+    - verbose
