Updates for 20.08 cycle start for groovy and libs
- Adds groovy to the series in the metadata
- Classic charms: sync charm-helpers.
- Classic ceph based charms:  also sync charms.ceph
- Reactive charms: trigger a rebuild

Change-Id: Iec41daf3384e165a45373f42f810c00900b0f479

--- a/src/metadata.yaml
+++ b/src/metadata.yaml
@@ -7,13 +7,14 @@ description: |
   all these protocols concurrently. Manila-Ganesha allows connecting
   a Manila server to a Ceph cluster via CephFS.
 tags:
-  - storage
-  - file-servers
+- storage
+- file-servers
 series:
-  - bionic
-  - disco
-  - eoan
-  - focal
+- bionic
+- disco
+- eoan
+- focal
+- groovy
 subordinate: false
 extra-bindings:
   tenant-storage:
