Fix HA setup/bundles and allow renaming
This change makes updates to support HA as well as manila-ganesha application
renaming.

The manila-ganesha charm supports active/passive HA. This is done by
co-locating manila-share and nfs-ganesha systemd services on the same unit,
and ensuring that those services are only running on the master unit with
the VIP. Once an HA deployment is complete, pacemaker will ensure that only
one unit is running the services.

If a second unit starts the services while the first is connected to CephFS,
the first will be evicted and its session state corrupted.

This patch ensures that the services are disabled/stopped until the HA
cluster setup is complete. This patch also overrides service_(re)start
methods so that they cooperate with pacemaker. Both of these changes
prevent a second unit from starting services while the first is connected
to CephFS. For example, if charm config is changed, services will only be
restarted on the master unit where they were running prior to the config
change.

Once HA setup is complete, pacemaker will ensure that only one unit has
running services. However, there is still a risk that a systemd service is
restarted manually by a user or other means, therefore the README is
updated to describe this situation.

This change also ensures that cluster_connected is called with necessary
gating rather than on every hook execution.

This change also removes some hard-coding in the charm that prevented the
charm from working if the application name was changed to something other
than manila-ganesha.

Finally, test bundles are updated to run clustered with hacluster and renamed
application name.

Change-Id: I887c3383c0dc43702f5e85ec56bc0716020c5b06
Closes-Bug: #1890330
Closes-Bug: #1890401
Related-Bug: #1867358
Related-Bug: #1891160
Related-Bug: #1904623
Func-Test-PR: https://github.com/openstack-charmers/zaza-openstack-tests/pull/461

--- a/src/templates/ceph.conf
+++ b/src/templates/ceph.conf
@@ -10,7 +10,7 @@ keyring = /etc/ceph/$cluster.$name.keyring
 mon host = {{ ceph.monitors }}
 
 
-[client.manila-ganesha]
+[client.{{ options.application_name }}]
 client mount uid = 0
 client mount gid = 0
 log file = /var/log/ceph/ceph-client.manila.log
