--- a/src/templates/rocky/manila.conf
+++ b/src/templates/rocky/manila.conf
@@ -47,12 +47,12 @@ lock_path = /var/lib/manila/tmp
 [cephfsnfs1]
 driver_handles_share_servers = False
 ganesha_rados_store_enable = True
-ganesha_rados_store_pool_name = manila-ganesha
+ganesha_rados_store_pool_name = {{ options.application_name }}
 share_backend_name = CEPHFSNFS1
 share_driver = manila.share.drivers.cephfs.driver.CephFSDriver
 cephfs_protocol_helper_type = NFS
 cephfs_conf_path = /etc/ceph/ceph.conf
-cephfs_auth_id = manila-ganesha
+cephfs_auth_id = {{ options.application_name }}
 cephfs_cluster_name = ceph
 cephfs_enable_snapshots = False
 cephfs_ganesha_server_is_remote = False
