--- a/src/tests/tests.yaml
+++ b/src/tests/tests.yaml
@@ -1,6 +1,8 @@
 charm_name: manila-ganesha
 dev_bundles:
 - bionic
+- focal-victoria
+- groovy-victoria
 gate_bundles:
 - bionic-rocky
 - bionic-stein
@@ -21,4 +23,4 @@ configure:
   - zaza.openstack.charm_tests.manila_ganesha.setup.setup_ganesha_share_type
 tests_options:
   force_deploy:
-    - focal-ussuri
+    - groovy-victoria
