Add local ganesha.conf for specific configuration
In addition to providing the Ganesha recommended Ceph
FSAL configuration, this change includes a Manila driver
requirement of including the Ganesha export path

func-test-pr: https://github.com/openstack-charmers/zaza-openstack-tests/pull/567

Closes-Bug: #1889287
Change-Id: I261840c267804c5dca052e37f8d279d584b598ea

--- a/src/templates/rocky/manila.conf
+++ b/src/templates/rocky/manila.conf
@@ -14,7 +14,7 @@ share_name_template = share-%s
 my_ip = {{ options.access_ip }}
 enabled_share_backends = cephfsnfs1
 scheduler_driver = manila.scheduler.drivers.filter.FilterScheduler
-
+host = {{ options.access_ip }}
 debug = {{ options.debug }}
 
 {% include "parts/section-transport-url" %}
