--- a/osci.yaml
+++ b/osci.yaml
@@ -3,11 +3,14 @@
       - charm-unit-jobs
     check:
       jobs:
-      - bionic-stein
-      - bionic-train
       - bionic-ussuri
       - focal-ussuri
       - focal-victoria
+      # Wallaby is currently broken because of a change in the
+      # default token-type requirements in manila's policy.json
+      # that the charm / tests need to learn to handle
+      # - focal-wallaby
+      - groovy-victoria
     vars:
       needs_charm_build: true
       charm_build_name: manila-ganesha
