--- a/src/templates/ceph.conf
+++ b/src/templates/ceph.conf
@@ -13,5 +13,5 @@ mon host = {{ ceph.monitors }}
 [client.{{ options.application_name }}]
 client mount uid = 0
 client mount gid = 0
-log file = /var/log/ceph/ceph-client.manila.log
+log file = /var/log/ceph/ceph-client.{{ options.application_name }}.log
 {% endif -%}
