--- a/src/tests/bundles/focal-wallaby.yaml
+++ b/src/tests/bundles/focal-wallaby.yaml
@@ -1,7 +1,7 @@
 variables:
-  openstack-origin: &openstack-origin distro
+  openstack-origin: &openstack-origin cloud:focal-wallaby
 
-series: groovy
+series: focal
 
 comment:
 - 'machines section to decide order of deployment. database sooner = faster'
@@ -26,15 +26,14 @@ machines:
   '14':
   '15':
   '16':
+    constraints: mem=8G
   '17':
     constraints: mem=8G
   '18':
-    constraints: mem=8G
   '19':
   '20':
   '21':
   '22':
-  '23':
 
 services:
 
@@ -81,7 +80,6 @@ services:
     to:
       - '6'
       - '7'
-      - '8'
 
   ceph-osd:
     charm: cs:~openstack-charmers-next/ceph-osd
@@ -91,9 +89,9 @@ services:
     storage:
       osd-devices: 'cinder,10G'
     to:
+      - '8'
       - '9'
       - '10'
-      - '11'
 
   ceph-fs:
     charm: cs:~openstack-charmers-next/ceph-fs
@@ -101,8 +99,8 @@ services:
     options:
       source: *openstack-origin
     to:
+      - '11'
       - '12'
-      - '13'
 
   manila:
     charm: cs:~openstack-charmers-next/manila
@@ -112,7 +110,7 @@ services:
       share-protocols: NFS
       openstack-origin: *openstack-origin
     to:
-      - '14'
+      - '13'
 
   nova-cloud-controller:
     charm: cs:~openstack-charmers-next/nova-cloud-controller
@@ -121,7 +119,7 @@ services:
       network-manager: Neutron
       openstack-origin: *openstack-origin
     to:
-      - '15'
+      - '14'
 
   placement:
     charm: cs:~openstack-charmers-next/placement
@@ -129,7 +127,7 @@ services:
     options:
       openstack-origin: *openstack-origin
     to:
-      - '16'
+      - '15'
 
   nova-compute:
     charm: cs:~openstack-charmers-next/nova-compute
@@ -141,8 +139,8 @@ services:
       migration-auth-type: ssh
       openstack-origin: *openstack-origin
     to:
+      - '16'
       - '17'
-      - '18'
 
   glance:
     charm: cs:~openstack-charmers-next/glance
@@ -150,7 +148,7 @@ services:
     options:
       openstack-origin: *openstack-origin
     to:
-      - '19'
+      - '18'
 
   neutron-api:
     charm: cs:~openstack-charmers-next/neutron-api
@@ -162,7 +160,7 @@ services:
       neutron-security-groups: true
       openstack-origin: *openstack-origin
     to:
-      - '20'
+      - '19'
 
   neutron-openvswitch:
     charm: cs:~openstack-charmers-next/neutron-openvswitch
@@ -174,7 +172,7 @@ services:
       bridge-mappings: physnet1:br-ex
       openstack-origin: *openstack-origin
     to:
-      - '21'
+      - '20'
 
   rabbitmq-server:
     charm: cs:~openstack-charmers-next/rabbitmq-server
@@ -182,7 +180,7 @@ services:
     options:
       source: *openstack-origin
     to:
-      - '22'
+      - '21'
 
   keystone:
     charm: cs:~openstack-charmers-next/keystone
@@ -190,7 +188,7 @@ services:
     options:
       openstack-origin: *openstack-origin
     to:
-      - '23'
+      - '22'
 
 relations:
 
