Ensure that we restart nfs-ganesha and manila share after config.
Recent changes to manila-ganesha broke how non-HA
deployments were configured, causing the manila-share
and nfs-ganesha processes to potentially start before
the config for them is correctly prepared. This
change ensures that these services are restarted once
their config is ready.

Change-Id: I4e63e64612554d74ffaca5c4e07b90f7ceb88d59

--- a/osci.yaml
+++ b/osci.yaml
@@ -5,6 +5,7 @@
       jobs:
       - bionic-ussuri
       - focal-ussuri
+      - ganesha-focal-ussuri-non-ha
       - focal-victoria
       # Wallaby is currently broken because of a change in the
       # default token-type requirements in manila's policy.json
@@ -21,3 +22,10 @@
     vars:
       needs_charm_build: true
       charm_build_name: manila-ganesha
+- job:
+    name: ganesha-focal-ussuri-non-ha
+    parent: bionic-ussuri
+    dependencies:
+      - bionic-ussuri
+    vars:
+      tox_extra_args: focal-ussuri-non-ha
