Add xena bundles
- add non-voting focal-xena bundle
- add non-voting impish-xena bundle
- rebuild to pick up charm-helpers changes
- update tox/pip.sh to ensure setuptools<50.0.0
- sync *requirements.txt in order to pin cffi

Change-Id: Ic3c4a6d382d734dab5821c35eda4ba2d8e77ce53
Co-authored-by: Aurelien Lourot <aurelien.lourot@canonical.com>

--- a/src/tests/tests.yaml
+++ b/src/tests/tests.yaml
@@ -1,6 +1,10 @@
 charm_name: manila-ganesha
 dev_bundles:
+- focal-wallaby
+- focal-xena
 - groovy-victoria
+- hirsute-wallaby
+- impish-xena
 gate_bundles:
 - focal-ussuri
 - focal-victoria
@@ -21,3 +25,4 @@ configure:
 tests_options:
   force_deploy:
     - groovy-victoria
+    - impish-xena
