--- a/osci.yaml
+++ b/osci.yaml
@@ -9,8 +9,15 @@
       # Wallaby is currently broken because of a change in the
       # default token-type requirements in manila's policy.json
       # that the charm / tests need to learn to handle
-      # - focal-wallaby
+      - focal-wallaby:
+          voting: false
+      - focal-xena:
+          voting: false
       - groovy-victoria
+      - hirsute-wallaby:
+          voting: false
+      - impish-xena:
+          voting: false
     vars:
       needs_charm_build: true
       charm_build_name: manila-ganesha
