--- a/src/tests/tests.yaml
+++ b/src/tests/tests.yaml
@@ -1,19 +1,21 @@
 charm_name: manila-ganesha
+
 gate_bundles:
-- focal-ussuri
-- focal-victoria
-- focal-wallaby
 - focal-xena
-- hirsute-wallaby
 - impish-xena
+
 dev_bundles:
 - focal-yoga
 - jammy-yoga
+
 smoke_bundles:
-- focal-ussuri
+- focal-xena
+
 target_deploy_status: {}
+
 tests:
   - zaza.openstack.charm_tests.manila_ganesha.tests.ManilaGaneshaTests
+
 configure:
   - zaza.openstack.charm_tests.glance.setup.add_lts_image
   - zaza.openstack.charm_tests.neutron.setup.basic_overcloud_network
@@ -21,8 +23,8 @@ configure:
   - zaza.openstack.charm_tests.nova.setup.manage_ssh_key
   - zaza.openstack.charm_tests.keystone.setup.add_demo_user
   - zaza.openstack.charm_tests.manila_ganesha.setup.setup_ganesha_share_type
+
 tests_options:
   force_deploy:
-    - hirsute-wallaby
     - impish-xena
     - jammy-yoga
