Update to build using charmcraft
Due to a build problem with the reactive plugin, this change falls back
on overriding the steps and doing a manual build, but it also ensures
the CI system builds the charm using charmcraft.  Changes:

- add a build-requirements.txt
- modify charmcraft.yaml
- modify osci.yaml
    -> indicate build with charmcraft
- modify tox.ini
    -> tox -e build does charmcraft build/rename
    -> tox -e build-reactive does the reactive build
- modify bundles to use the <charm>.charm artifact in tests.
  and fix deprecation warning re: prefix
- tox inception to enable tox -e func-test in the CI

This change also re-enables the gate for Xena.

Depends-On: https://review.opendev.org/c/openstack/charm-manila-ganesha/+/831057
Change-Id: Icd7c0a6d1c4c71d28f8bf9a2d8b6a18ec58b8e4e

--- a/osci.yaml
+++ b/osci.yaml
@@ -3,18 +3,9 @@
       - charm-unit-jobs-py38
       - charm-unit-jobs-py39
       - charm-yoga-functional-jobs
-      # Non-voting due to:
-      # https://bugs.launchpad.net/charm-manila-ganesha/+bug/1952763
-      # - charm-xena-functional-jobs
-      # - charm-wallaby-functional-jobs
-    check:
-      jobs:
-      # Non-voting due to:
-      # https://bugs.launchpad.net/charm-manila-ganesha/+bug/1952763
-      - focal-xena:
-          voting: false
-      - impish-xena:
-          voting: false
+      - charm-xena-functional-jobs
+      - charm-yoga-functional-jobs
     vars:
       needs_charm_build: true
       charm_build_name: manila-ganesha
+      build_type: charmcraft
