--- a/src/tests/bundles/jammy-yoga.yaml
+++ b/src/tests/bundles/jammy-yoga.yaml
@@ -1,6 +1,8 @@
 variables:
   openstack-origin: &openstack-origin distro
 
+local_overlay_enabled: True
+
 series: jammy
 
 comment:
@@ -73,7 +75,7 @@ services:
 
   manila-ganesha-az1:
     num_units: 3
-    charm: ../../../manila-ganesha
+    charm: ../../../manila-ganesha.charm
     options:
       openstack-origin: *openstack-origin
     to:
@@ -90,7 +92,7 @@ services:
       - '6'
       - '7'
       - '8'
-    channel: latest/edge
+    channel: quincy/edge
 
   ceph-osd:
     charm: ch:ceph-osd
@@ -103,7 +105,7 @@ services:
       - '9'
       - '10'
       - '11'
-    channel: latest/edge
+    channel: quincy/edge
 
   ceph-fs:
     charm: ch:ceph-fs
@@ -113,7 +115,7 @@ services:
     to:
       - '12'
       - '13'
-    channel: latest/edge
+    channel: quincy/edge
 
   manila:
     charm: ch:manila
@@ -124,7 +126,7 @@ services:
       openstack-origin: *openstack-origin
     to:
       - '14'
-    channel: latest/edge
+    channel: yoga/edge
 
   nova-cloud-controller:
     charm: ch:nova-cloud-controller
@@ -134,7 +136,7 @@ services:
       openstack-origin: *openstack-origin
     to:
       - '15'
-    channel: latest/edge
+    channel: yoga/edge
 
   placement:
     charm: ch:placement
@@ -143,7 +145,7 @@ services:
       openstack-origin: *openstack-origin
     to:
       - '16'
-    channel: latest/edge
+    channel: yoga/edge
 
   nova-compute:
     charm: ch:nova-compute
@@ -157,7 +159,7 @@ services:
     to:
       - '17'
       - '18'
-    channel: latest/edge
+    channel: yoga/edge
 
   glance:
     charm: ch:glance
@@ -166,7 +168,7 @@ services:
       openstack-origin: *openstack-origin
     to:
       - '19'
-    channel: latest/edge
+    channel: yoga/edge
 
   neutron-api:
     charm: ch:neutron-api
@@ -179,11 +181,11 @@ services:
       openstack-origin: *openstack-origin
     to:
       - '20'
-    channel: latest/edge
+    channel: yoga/edge
 
   neutron-openvswitch:
     charm: ch:neutron-openvswitch
-    channel: latest/edge
+    channel: yoga/edge
 
   neutron-gateway:
     charm: ch:neutron-gateway
@@ -193,7 +195,7 @@ services:
       openstack-origin: *openstack-origin
     to:
       - '21'
-    channel: latest/edge
+    channel: yoga/edge
 
   rabbitmq-server:
     charm: ch:rabbitmq-server
@@ -211,7 +213,7 @@ services:
       openstack-origin: *openstack-origin
     to:
       - '23'
-    channel: latest/edge
+    channel: yoga/edge
 
 relations:
 
