Update to build using charmcraft - xena batch
Batch to add building by charmcraft for the xena batch.
Supports just wallaby and xena in gate.

This patch currently requires the wallaby-proposed pocket
to get past the referenced bug.

Depends-On: https://review.opendev.org/c/openstack/charm-manila-ganesha/+/834934
Related-Bug: #1967895
Change-Id: I9fd75186e0e94ccf5a160597f98c1fd2373a2def

--- a/osci.yaml
+++ b/osci.yaml
@@ -1,24 +1,11 @@
 - project:
     templates:
-      - charm-unit-jobs
+      - charm-unit-jobs-py38
     check:
       jobs:
-      - bionic-ussuri
-      - focal-ussuri
-      - ganesha-focal-ussuri-non-ha
-      - focal-victoria
-      # Wallaby is currently broken because of a change in the
-      # default token-type requirements in manila's policy.json
-      # that the charm / tests need to learn to handle
-      # - focal-wallaby
-      - groovy-victoria
+      - focal-xena
+      - focal-wallaby
     vars:
       needs_charm_build: true
       charm_build_name: manila-ganesha
-- job:
-    name: ganesha-focal-ussuri-non-ha
-    parent: bionic-ussuri
-    dependencies:
-      - bionic-ussuri
-    vars:
-      tox_extra_args: focal-ussuri-non-ha
+      build_type: charmcraft
