Update the charmcraft.yaml for xena (no 22.04 base)
- Build on 20.04 amd64
- Run on 20.04 amd64, s390x, ppc64el, arm64

Change-Id: I4b09cfd7b19776d6a70c45f85dd2f8001bfa94db

--- a/src/tests/bundles/focal-xena.yaml
+++ b/src/tests/bundles/focal-xena.yaml
@@ -1,4 +1,4 @@
-local_overlay_enabled: True
+local_overlay_enabled: False
 
 variables:
   openstack-origin: &openstack-origin cloud:focal-xena
@@ -41,25 +41,25 @@ services:
 
   manila-mysql-router:
     charm: ch:mysql-router
-    channel: 8.0.19/edge
+    channel: 8.0/edge
   manila-ganesha-mysql-router:
     charm: ch:mysql-router
-    channel: 8.0.19/edge
+    channel: 8.0/edge
   keystone-mysql-router:
     charm: ch:mysql-router
-    channel: 8.0.19/edge
+    channel: 8.0/edge
   neutron-api-mysql-router:
     charm: ch:mysql-router
-    channel: 8.0.19/edge
+    channel: 8.0/edge
   nova-cloud-controller-mysql-router:
     charm: ch:mysql-router
-    channel: 8.0.19/edge
+    channel: 8.0/edge
   glance-mysql-router:
     charm: ch:mysql-router
-    channel: 8.0.19/edge
+    channel: 8.0/edge
   placement-mysql-router:
     charm: ch:mysql-router
-    channel: 8.0.19/edge
+    channel: 8.0/edge
 
   mysql-innodb-cluster:
     charm: ch:mysql-innodb-cluster
@@ -70,7 +70,7 @@ services:
       - '0'
       - '1'
       - '2'
-    channel: 8.0.19/edge
+    channel: 8.0/edge
 
   manila-ganesha-az1:
     num_units: 3
